devel
-----

* Now supporting projections on traversals. In AQL Traversal statements like
  FOR v,e,p IN 1..3 OUTBOUND @start GRAPH @graph RETURN v.name
  we will now detect attribute accesses on the data, in above example "v.name"
  and use it to optimize data-loading, e.g. we will only extract the "name" attribute.
  This optimization will help if you have large document sizes, but only access small
  parts of the documents. By default we will only project up to 5 attributes on each
  vertex, and edge. This limit can be modified by adding OPTIONS {maxProjections: 42}.
  To identify if your query is using projections the explain output will now contain a
  hint like `/* vertex (projections: `name`) */`
  For now only attribute accesses are detected, functions like `KEEP` will not be projected.

* Updated arangosync to v2.11.0-preview-1.

* Change default `format_version` for RocksDB .sst files from 3 to 5.

* Added support for creating autoincrement keys on cluster mode, but only for 
  single sharded collections.

* Add support for LZ4 and LZ4HC compression support for RocksDB.

* Allow parallel access to the shards of smart edge collections in AQL via 
  parallel GatherNodes.

* Update RocksDB internal table checksum type to xxHash64.

* Updated arangosync to v2.10.0.

* Added several startup option to configure parallelism for individual Pregel 
  jobs:

  - `--pregel.min-parallelism`: minimum parallelism usable in Pregel jobs.
  - `--pregel.max-parallelism`: maximum parallelism usable in Pregel jobs.
  - `--pregel.parallelism`: default parallelism to use in Pregel jobs.

  These parallelism options can be used by administrators to set concurrency
  defaults and bounds for Pregel jobs. Each individual Pregel job can set
  its own parallelism value using the job's `parallelism` option, but the
  job's parallelism value will be clamped to the bounds defined by
  `--pregel,min-parallelism` and `--pregel.max-parallelism`. If a job does