@@ -40,9 +40,12 @@ FrontendFeature::FrontendFeature(Server& server)
 }
 
 void FrontendFeature::collectOptions(std::shared_ptr<ProgramOptions> options) {
-  options->addSection("frontend", "web interface");
+  options->addSection("web-interface", "browser-based frontend");
 
-  options->addOption("--frontend.version-check",
+  options->addOldOption("frontend.version-check",
+                        "web-interface.version-check");
+
+  options->addOption("--web-interface.version-check",
                      "alert the user if new versions are available",
                      new BooleanParameter(&_versionCheck),
                      arangodb::options::makeFlags(
