@@ -1,6 +1,14 @@
 devel
 -----
 
+* Renamed the `--frontend.*` startup options to `--web-interface.*`:
+
+  - `--frontend.proxy-request.check` -> `--web-interface.proxy-request.check`
+  - `--frontend.trusted-proxy` -> `--web-interface.trusted-proxy`
+  - `--frontend.version-check` -> `--web-interface.version-check`
+
+  The former startup options are still supported.
+
 * Now supporting projections on traversals. In AQL Traversal statements like
   FOR v,e,p IN 1..3 OUTBOUND @start GRAPH @graph RETURN v.name
   we will now detect attribute accesses on the data, in above example "v.name"
